# cogency-cc

./: .gitignore  CONTEXT.md  README.md  cc  config.json  justfile  pyproject.toml
.github/workflows/: readme-review.yml
cc/: agent.py  cc_md.py  cli.py  config.py  storage.py
cc/commands/: __init__.py  export.py  session.py
cc/llms/: glm.py
docs/: api-reference.md  architecture.md  cli-vs-tui.md  design.md  glm-integration.md  protocol.md  spec.md
src/cc/: __init__.py  __main__.py  _render_event.py  agent.py  alias.py  cc_md.py  cli.py  commands.py  compact.py  config.py  context.py  conversations.py  identities.py  identity.py  profile.py  renderer.py  session.py  sessions.py  setup.py  state.py  storage.py  storage_ext.py  summary.py
src/cc/cli/: __init__.py  admin.py  ask.py  conversation.py  debug.py  display.py
src/cc/commands/: __init__.py  context.py  export.py  profile.py  session.py
src/cc/lib/: color.py  fs.py  sqlite.py
src/cc/llms/: __init__.py  codex.py  glm.py  mlx.py
src/cc/render/: __init__.py  buffer.py  color.py  format.py  renderer.py  stream.py
src/cc/storage/: __init__.py  db.py  snapshots.py  summaries.py
src/cc/tools/: shell.py
src/cogency_code/: __init__.py  __main__.py  agent.py  app.py  commands.py  conversations.py  events.py  identities.py  identity.py  instructions.py  setup.py  state.py
src/cogency_code/llms/: glm.py
src/cogency_code/widgets/: __init__.py  config.py  footer.py  header.py  resume.py  stream.py
tests/: conftest.py  test_agent_tools.py  test_app.py  test_cli_one_shot.py  test_clipboard.py  test_events.py  test_glm.py  test_identity_config.py  test_integration.py  test_renderer_integration.py  test_state.py  test_stream.py
tests/cc/llms/: test_codex.py
tests/cc/unit/: test_shell.py  test_shell_rendering.py  test_shell_truncate.py
tests/integration/: conftest.py  test_agent_creation.py  test_agent_security.py  test_agent_tools.py  test_cli_integration.py  test_identity_config.py  test_integration.py  test_render.py  test_session.py  test_session_management.py
tests/unit/: test_agent.py  test_alias.py  test_cc_md.py  test_chunks_behavior.py  test_cli.py  test_commands.py  test_config.py  test_config_load.py  test_conversations.py  test_identity.py  test_instructions.py  test_main.py  test_renderer.py  test_sessions.py  test_state.py  test_storage.py  test_storage_ext.py  test_user_id.py
tests/unit/commands/: test_commands.py  test_context.py  test_conversations.py  test_export.py
tests/unit/lib/: test_fs.py  test_sqlite.py
tests/unit/llms/: test_glm.py  test_glm_intelligent_end.py
tests/unit/render/: test_boundary_trimming.py  test_buffer.py  test_diff.py  (+3 more)
(+2 files in other folders)
